explanation funktioniert